# zoo_store_back_end

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev_requirements.txt  docker-compose.yml  env_example  prod_requirements.txt  pyproject.toml  ruff.toml
zoo_store/: manage.py
zoo_store/accounts/: admin.py  errors.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
zoo_store/accounts/management/commands/: create_superuser.py
zoo_store/accounts/migrations/: 0001_initial.py  0002_profile.py  0003_remove_user_groups_remove_user_is_staff_and_more.py  0004_user_groups_user_is_active_user_is_staff_and_more.py
zoo_store/accounts/tests/: __init__.py  test_managers.py  test_models.py  test_permissions.py  test_serializers.py  test_signals.py  test_viewsets.py
zoo_store/accounts/tests/test_private_api/: test_profile_api.py  test_user_api.py
zoo_store/accounts/tests/test_public_api/: test_token_api.py  test_user_api.py
zoo_store/base/: __init__.py  mixins.py  model_test.py  serializer_test.py
zoo_store/base/test_cases/: __init__.py  model_test_case.py  serializer_test_case.py  test_case.py  view_set_test_case.py
zoo_store/base/tests/: custom_test_case.py  model_test.py  serializer_test.py  test_cases.py  test_mixins.py
zoo_store/zoo_store/: asgi.py  settings.py  urls.py  wsgi.py
