[tool.poetry]
name = "zoo-store-back-end"
version = "0.1.0"
description = ""
authors = ["DmitryTok <FoB09@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-allauth = "^0.58.2"
django-filter = "^23.4"
django-taggit = "^5.0.1"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
mypy = "^1.7.0"
drf-spectacular = "^0.26.5"
django-debug-toolbar = "^4.2.0"
pre-commit = "^3.5.0"
tree = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
